--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "method-override": "^3.0.0",
     "mysql2": "^3.14.1",
     "router": "^2.2.0"
   }
