--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
+    "mongoose": "^8.15.1",
     "mysql2": "^3.14.1",
     "router": "^2.2.0",
     "sequelize": "^6.37.7"
